--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
             alt="Imagen 1 del Proyecto 1"
           />
           <img
-          src="https://ik.imagekit.io/elbabvgo6/Captura%20de%20pantalla%202025-05-13%20a%20las%206.08.28%E2%80%AFp.%E2%80%AFm..png?updatedAt=1747152549507
-          alt="Imagen 2 del Proyecto 1" />
+            src="https://ik.imagekit.io/elbabvgo6/Captura%20de%20pantalla%202025-05-13%20a%20las%206.08.28%E2%80%AFp.%E2%80%AFm..png?updatedAt=1747152549507"
+            alt="Imagen 2 del Proyecto 1"
+          />
         </div>
         <div class="texto-proyecto">
           <h3>TOMAVISTAS</h3>
@@ -77,10 +78,13 @@
       <div class="proyecto-contenido horizontal">
         <div class="imagenes-proyecto fila">
           <img
-          src="https://ik.imagekit.io/elbabvgo6/Captura%20de%20pantalla%202025-05-13%20a%20las%206.23.17%E2%80%AFp.%E2%80%AFm..png?updatedAt=1747153429847
-          alt="Imagen 1 del Proyecto 2" /> <img
-          src=https://ik.imagekit.io/elbabvgo6/Captura%20de%20pantalla%202025-05-13%20a%20las%206.22.40%E2%80%AFp.%E2%80%AFm..png?updatedAt=1747153435211
-          alt="Imagen 2 del Proyecto 2" />
+            src="https://ik.imagekit.io/elbabvgo6/Captura%20de%20pantalla%202025-05-13%20a%20las%206.23.17%E2%80%AFp.%E2%80%AFm..png?updatedAt=1747153429847"
+            alt="Imagen 1 del Proyecto 2"
+          />
+          <img
+            src="https://ik.imagekit.io/elbabvgo6/Captura%20de%20pantalla%202025-05-13%20a%20las%206.22.40%E2%80%AFp.%E2%80%AFm..png?updatedAt=1747153435211"
+            alt="Imagen 2 del Proyecto 2"
+          />
         </div>
         <div class="texto-proyecto">
           <h3>NEXO</h3>
@@ -106,8 +110,9 @@
       <div class="proyecto-contenido">
         <div class="imagenes-proyecto">
           <img
-          src=https://ik.imagekit.io/elbabvgo6/2090-1-11-Cristiani_Gordillo_Paola_684e7c37-7c72-478c-a72c-953a64f824f3.pdf?updatedAt=1747153652754
-          alt="Imagen del Proyecto 3" />
+            src="https://ik.imagekit.io/elbabvgo6/2090-1-11-Cristiani_Gordillo_Paola_684e7c37-7c72-478c-a72c-953a64f824f3.pdf?updatedAt=1747153652754"
+            alt="Imagen del Proyecto 3"
+          />
         </div>
         <div class="texto-proyecto">
           <h3>Poster creativo</h3>
@@ -129,14 +134,13 @@
     <section class="pantalla proyecto">
       <div class="proyecto-contenido">
         <div class="imagenes-proyecto">
-          <img />
           <img
             src="https://ik.imagekit.io/elbabvgo6/Ilustracio%CC%81n_sin_ti%CC%81tulo.jpg?updatedAt=1747152096984"
             alt="Imagen 2 del Proyecto 4"
           />
         </div>
         <div class="texto-proyecto">
-          <h3>Nombre del Proyecto 4</h3>
+          <h3>Ilustración Navideña para Starbucks</h3>
           <p>
             Este proyecto consistió en la creación de una ilustración navideña
             inspirada en la atmósfera festiva de las fiestas, en colaboración
@@ -148,7 +152,6 @@
       </div>
     </section>
 
-    <!-- Proyecto 5 -->
     <section class="pantalla proyecto">
       <div class="proyecto-contenido">
         <div class="imagenes-proyecto collage">
@@ -166,12 +169,12 @@
           />
         </div>
         <div class="texto-proyecto">
-          <h3>Proyecto fotografico</h3>
+          <h3>Proyecto fotográfico</h3>
           <p>
             Este proyecto consistió en una documentación fotográfica de mi viaje
             a Marruecos. A través de mi cámara, capturé la esencia de la vida
-            cotidiana, las colores vibrantes y los paisajes desérticos que
-            caracterizan este país, Se trató de un enfoque documental, con una
+            cotidiana, los colores vibrantes y los paisajes desérticos que
+            caracterizan este país. Se trató de un enfoque documental, con una
             estética que refleja mi percepción personal del lugar, su gente y su
             cultura.
           </p>
